tests/error/break_outside_loop.magi
// TEST: Break outside loop should error

main :: () -> i32 {
    break
    return 0
}
